[package]
name = "shivr"
version = "0.1.5"
edition = "2021"
description = "Monorepo package command runner"
authors = ["Jake Laurie"]
readme = "README.md"
homepage = "https://github.com/xtenduke/shiv"
keywords = ["monorepo", "command", "ci"]
categories = ["command-line-utilities", "development-tools"]
license-file = "LICENSE"
exclude = ["*.zip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
argh = "0.1.10"
threadpool = "1.8.1"
